[tool.poetry]
name = "fastapi_exchanger"
version = "0.1.0"
description = ""
authors = ["Entoni Mzilangve <entoni.mzilangve@dualbootpartners.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
